<resources>
    <string name="app_name">AlarmExample</string>

    <string name="title_app">Alarm Test</string>
    <string name="btn_repeat_alarm">Set Repeating Alarm</string>
    <string name="btn_cancel_repeat_alarm">Cancel Repeating Alarm</string>
    <string name="btn_set_inexact_repeating_alarm">Set Inexact Repeating Alarm</string>
    <string name="btn_alarm">Set Alarma</string>
    <string name="action_settings">Settings</string>
</resources>
