<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_alarm"
        android:layout_below="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_alarm" />

    <Button
        android:layout_below="@+id/btn_alarm"
        android:id="@+id/btn_repeat_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_repeat_alarm"/>
    <Button
        android:layout_below="@+id/btn_repeat_alarm"
        android:id="@+id/btn_repeat_inexact_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_inexact_repeating_alarm"/>

    <Button
        android:layout_below="@+id/btn_repeat_inexact_alarm"
        android:id="@+id/btn_cancel_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_repeat_alarm"/>


</RelativeLayout>
